--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -24,6 +24,18 @@
                                 <p class="form-control-static" th:text="${comite.codigocomite}">codigo de comite</p></div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-5 control-label">DUI:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${comite.dui}">DUI</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-5 control-label">NIT:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${comite.nit}">NIT</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-5 control-label">Nombre de comite:</label>
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${comite.nombrecomite}">Nombre de comite</p>
