--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -31,7 +31,8 @@
                 <th>Tipo de Evento</th>
                 <th>Especialidad</th>
                 <th>Pais Capacitacion</th>
-                <th>Fecha Capacitacion</th>
+                <th>Fecha Capacitacion Desde</th>
+                <th>Fecha Capacitacion Hasta</th>
                 <th>Tipo Capacitacion</th>
                 <th>Estado Capacitacion</th>
                 <th>Codigo Capacitador</th>
@@ -51,7 +52,8 @@
                 <td th:text="${capacitacion.tipoevento}">Tipo Evento</td>
                 <td th:text="${capacitacion.especialidadevento}">Especialidad</td>
                 <td th:text="${capacitacion.paiscapacitacion}">Pais Capacitacion</td>
-                <td th:text="${capacitacion.fechacapacitacion}">Fecha Capacitacion</td>
+                <td th:text="${capacitacion.fechacapacitaciondesde}">Fecha Capacitacion Desde</td>
+                <td th:text="${capacitacion.fechacapacitacionhasta}">Fecha Capacitacion Hasta</td>
                 <td th:text="${capacitacion.tipocapacitacion}">Tipo Capacitacion</td>
                 <td th:text="${capacitacion.estadocapacitacion}">Estado Capacitacion</td>
                 <td th:text="${capacitacion.codigocapacitador.codigocapacitador}">Codigo Capacitador</td>
