--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -94,9 +94,15 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Fecha de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Fecha de Capacitacion Desde:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.fechacapacitacion}">Fecha de Capacitacion</p>
+                                <p class="form-control-static" th:text="${capacitacion.fechacapacitaciondesde}">Fecha de Capacitacion</p>
+                            </div>
+                        </div>
+                    <div class="form-group">
+                            <label class="col-sm-5 control-label">Fecha de Capacitacion Hasta:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${capacitacion.fechacapacitacionhasta}">Fecha de Capacitacion</p>
                             </div>
                         </div>
                         <div class="form-group">
@@ -123,7 +129,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                         <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
+                         <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
                     </div>
                 </div>
             </div>
