--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -35,10 +35,22 @@
                         <p class="form-control-static" th:text="${capacitador.temadominio}">Tema de dominio</p>
                     </div>
                 </div>
+                         <div class="form-group">
+                    <label class="col-sm-2 control-label">Institucion:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.institucioncapacitador}">Institucion</p>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Tipo Capacitador:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
+                    </div>
+                </div>
+                     <div class="form-group">
+                    <label class="col-sm-2 control-label">Tipo Agrupacion:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${capacitador.tipoagrupacion}">Tipo Capacitador</p>
                     </div>
                 </div>
                 <div class="form-group">
