--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -17,7 +17,18 @@
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
 <!--          <input type="hidden" th:field="*{codigocomite}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-            
+             <div class="form-group">
+                <label class="col-sm-2 control-label">DUI:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{dui}"/>
+                </div>
+            </div>
+             <div class="form-group">
+                <label class="col-sm-2 control-label">NIT:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" th:field="*{nit}"/>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de comite:</label>
                 <div class="col-sm-10">
