--- a/src/main/webapp/WEB-INF/reports/victor/generico.jrxml
+++ b/src/main/webapp/WEB-INF/reports/victor/generico.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="50"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="parameter1" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -62,6 +62,14 @@
 				<reportElement x="681" y="86" width="100" height="20" uuid="defd1f57-b9e1-4411-9a1b-4f605b930187"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="60" y="1" width="148" height="69" uuid="9f639d1a-7a5d-4b1f-ad51-04a75350da8b"/>
+				<imageExpression><![CDATA["/home/daniel/NetBeansProjects/SISADMRH/src/main/resources/static/image/LOGOMJ.jpg"]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="624" y="0" width="105" height="60" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
+				<imageExpression><![CDATA["/home/daniel/NetBeansProjects/SISADMRH/src/main/resources/static/image/GOES.jpg"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -87,10 +95,14 @@
 				<reportElement x="457" y="42" width="100" height="20" uuid="490e45c9-0353-42d5-8b19-b6879e26d467"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="325" y="174" width="100" height="20" uuid="cbec0ed1-8970-442a-af13-0bb74b6b6f36"/>
-				<text><![CDATA[Fecha Desde]]></text>
-			</staticText>
+			<textField>
+				<reportElement x="357" y="42" width="100" height="20" uuid="59271047-626e-4fd6-94f2-bf1b30e293a5"/>
+				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="575" y="42" width="100" height="20" uuid="8ab75876-80ee-4d3e-8042-58f322695998"/>
+				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
