valición de capacitador

--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -14,7 +14,7 @@
         <div class="col-md-8">
             <h3 align="center">Detalle Capacitador</h3>
             <div>
-                <form class="form-horizontal" th:object="${capacitador}" th:action="@{../capacitador}" method="post">
+                <form class="form-horizontal" th:object="${capacitador}" th:action="@{/capacitadores/capacitador}" method="post">
                     <!--            <input type="hidden" th:field="*{codigocapacitador}"/>
                                 <input type="hidden" th:field="*{nombrecapacitador}"/>-->
                     <!--            <div class="form-group">
